--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,11 @@ arrow-schema = "54.2.1"
 arrow= "54.2.1"
 chrono = "0.4.39"
 deltalake = { version = "0.25.0", features = ["datafusion"] }
-function_name = "0.3.0"
-futures-lite = "2.6.0"
 anyhow = "1.0.98"
-async-trait = "0.1.88"
 polars-lazy = { version = "0.46.0", features = ["parquet"] }
 polars = "0.46.0"
-trait-variant = "0.1.2"
 walkdir = "2.5.0"
-rand = "0.9.1"
-counter = "0.6.0"
+rocket = "0.5.1"
 #duckdb = { version = "1.2.2", features = ["bundled"] }
 
 [dependencies.rusqlite]
@@ -41,5 +36,7 @@ features = [
 [dev-dependencies]
 rstest = "0.25.0"
 random-string = "1.1.0"
+rand = "0.9.1"
+counter = "0.6.0"
 
-
+function_name = "0.3.0"
